# OHIF-AI

./: .env-sample  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.real.txt  start.sh
Viewers/: Dockerfile  package.json
configs/: rl_nninteractive_skeleton.json
docs/: data_manifest.md  evidential-deep-learning-reference.md  pi-presentation-guide.md  rl-nninteractive-repro.md
monai-label/: .dockerignore  Dockerfile  entrypoint.sh  requirements.txt
rl_nninteractive/: __init__.py  adapter.py  autopet_pipeline.py  autopet_rl_recovery.py  autopet_seg.py  blackwell_handoff.py  cli.py  config.py  dataset_manifest.py  deterministic_geometry.py  edl_fusion_hybrid.py  env.py  eval_harness.py  evaluation.py  evidential.py  evidential_candidates.py  evidential_dataset.py  evidential_eval.py  interaction_log.py  learning_loops.py  medical_geometry.py  metrics.py  mock_adapter.py  multitool.py  nninteractive_contract.py  phase1_real.py  phase1_small.py  phase2_smoke.py  point_policy.py  prompt_update_edl.py  provenance.py  real_adapter.py  real_rollout.py  real_smoke.py  real_states.py  recommender.py  rl_policy.py  robot_user.py  route_policy_eval.py  safety_reward.py  (+6 more)
sam3/: pyproject.toml
scripts/: autopet_resenc_l_batch.py  autopet_resenc_l_smoke.py  build_deep_psma_manifest.py  download_weights.sh  evaluate_prompt_routes.py  finalize_frozen_route_cohort.py  finalize_fusion_only_cohort_v2.py  freeze_edl_fusion_hybrid.py  prepare_autopet_nnunet_input.py  present_pi_walkthrough.py  render_autopet_prompt_cohort.py  (+12 more)
(+97 files in other folders)
